Fixed issue with overflowing background color on input groups

--- a/app/assets/code-club/stylesheets/components/_form.scss
+++ b/app/assets/code-club/stylesheets/components/_form.scss
@@ -99,6 +99,7 @@
     border:     $border-size-base solid $grey-x-light;
     @include rem('border-radius', $border-radius-small);
     @include margin-bottom($margin-base);
+    overflow:   hidden;
   }
 
     .c-form__input-group-checkbox,
