--- a/public/assets/code-club/stylesheets/code-club.css
+++ b/public/assets/code-club/stylesheets/code-club.css
@@ -1,10 +1,3 @@
-/**
- * code-club.css
- * 
- * Code Club Style Guide - A collection of UI components for styling Code Club websites
- * @version v0.0.1-48
- * @link https://styleguide.codeclubworld.org/
- */
 /*
   These styles try to follow the ITCSS philosophy for organising styles, by csswizrdry.com
   http://www.creativebloq.com/web-design/manage-large-scale-web-projects-new-css-architecture-itcss-41514731?page=1
@@ -2019,7 +2012,8 @@ ul {
   border-radius: 12px;
   border-radius: 0.75rem;
   margin-bottom: 16px;
-  margin-bottom: 1rem; }
+  margin-bottom: 1rem;
+  overflow: hidden; }
 
 .c-form__input-group-checkbox:checked + .c-form__input-group-label,
 .c-form__input-group-radio:checked + .c-form__input-group-label {
